--- a/src/variables.scss
+++ b/src/variables.scss
@@ -50,6 +50,9 @@
     --primary-color: #296cac;
 
     // background
+    --darker-background: #c1c1c1;
+    --dark-background: #dddddd;
+    --medium-dark-background: #e1e1e1;
     --medium-background: #eeeeee;
     --light-background: #F5F5F5;
     --lighter-background: #f8f8f8;
